--- a/SNSFFW/SNSFFW.css
+++ b/SNSFFW/SNSFFW.css
@@ -3638,7 +3638,7 @@ h6 {
     font-size: 1.125rem;
 }
 
-p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
+p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
     font-size: 1rem;
 }
 
@@ -3672,7 +3672,7 @@ figcaption {
         font-size: 1rem;
     }
 
-    p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
+    p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
         font-size: .875rem;
     }
 
@@ -3707,7 +3707,7 @@ figcaption {
         font-size: .875rem;
     }
 
-    p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
+    p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
         font-size: .75rem;
     }
 
